# mycormarl

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  main.py  pyproject.toml
docs/: growth-model.md  ippo-actor-interface-implementation-plan.md  model-overview.md  module-map.md  open-questions.md  phosphate-model.md
docs/adr/: 0001-keep-environment-independent-of-ppo.md  0002-use-a-typed-transition-contract.md  0003-require-valid-physical-actions-at-the-environment-boundary.md  0004-derive-uptake-geometry-from-current-biomass.md
docs/agents/: domain.md  issue-tracker.md
implementation-docs/: phosphate-foundations-reference.md  phosphate-model-guide.md  phosphate-uptake-implementation-plan.md  phosphate-uptake-todos.md
scripts/: __init__.py  geometry_growth_video.py  phosphate_examples.py  phosphate_qualification.py  train_ppo.py
technical-summaries/: phosphorus-conservation-and-accounting.md
tests/: test_actions.py  test_actor_observations.py  test_axisymmetric_geometry.py  test_base_mycor_refactor.py  test_continuous_phosphate_uptake.py  test_environment_phosphate_uptake.py  test_geometry_growth_video.py  test_growth_geometry.py  test_init_multi_per_class.py  test_init_one_per_class.py  test_labile_phosphate_state.py  test_p3_environment_uptake.py  test_params.yaml  test_phosphate_diffusion.py  test_phosphate_examples.py  test_phosphate_qualification.py  test_phosphate_unit_contracts.py  test_review_repairs.py  test_sparse_phosphate_uptake.py  test_step_env_dynamics.py  test_trade_multi_per_class.py  test_trade_one_per_class.py  test_transitions.py
(+61 files in other folders)
